<resources>
    <string name="app_name">Football League</string>

    <string-array name="leagueName">
        <item>English Premier League</item>
        <item>La Liga</item>
        <item>Serie A</item>
        <item>Ligue 1</item>
        <item>Bundesliga</item>
        <item>Eredivisie</item>
    </string-array>
...
    <string name="no_favorite_match">No Favorite Match</string>
    <string name="search_match">Search Match</string>
    <string name="league_logo">League Logo</string>
    <string name="home_logo">Home Logo</string>
    <string name="away_logo">Away Logo</string>
    <string name="logo_team">Logo Team</string>
    <string name="arsenal">Arsenal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="youtube">youtube</string>
    <string name="team_logo">team logo</string>

    <!-- TODO: Remove or change this placeholder text -->
...
